[package]
name = "Researcher"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
ollama-rs = "0.3.2"
scraper = "0.20"
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
fastrand = "2.3.0"
warp = { version = "0.4.2", features = ["server"] }
